CVS code -
- files.c:
  input_tab()
	- Since the field precision operator used in the sprintf() uses
	  ints and not size_t's, replace it with two strncpy()s, which
	  use size_t's. (DLR)
- help.c:
  parse_help_input()
	- Add 'E' and 'e' as aliases for Exit, for consistency with the
	  file browser. (DLR)
- doc/faq.html:
	- Update the question in section 4.13 to match the version of it
	  in the answer section. (DLR)
- doc/syntax/c.nanorc:
	- Simplify "undef", "ifn?def", "elif", and "else" in the
	  preprocessor regexes. (DLR)

GNU nano 1.9.99pre2 - 2006.10.02
- General:
	- Miscellaneous comment fixes. (DLR)
	- Make sure that the statusbar cursor position is always
	  properly reset when we get out of all statusbar prompts.
	  Changes to do_insertfile(), do_writeout(),
	  handle_sigwinch(), main(), and do_prompt_abort(). (DLR)
- prompt.c:
  do_statusbar_input()
	- If we get a verbatim input sequence ending with Ctrl-J, remove
	  the Ctrl-J from the buffer before interpreting it as Enter, so
	  that it doesn't erroneously fall through to the edit window
	  and get interpreted as Justify. (DLR)
- winio.c:
  get_input()
	- Simplify to avoid an unnecessary key_buffer_len check. (DLR)
- doc/syntax/c.nanorc:
	- Add "size_t" and "ssize_t" to the types regexes. (DLR,
	  suggested by Mike Frysinger)
	- Simplify "signed" and "unsigned" in the types regexes. (DLR)

GNU nano 1.9.99pre1 - 2006.08.29
- General:
	- Miscellaneous comment fixes. (DLR)
	- Fix option descriptions.  At least one of the two parts of
	  +LINE,COLUMN must be specified at all times; COLUMN is not the
	  only optional value.  Also, fix wording problems in
	  -O/--morespace and -W/--wordbounds.  Changes to usage(),
	  UPGRADE, nano.1, nanorc.5, rnano.1, nano.texi, and
	  nanorc.sample.in. (DLR)
	- Fix mouse support so that it truly ignores everything except
	  releases and clicks of button 1.  Changes to
	  enable_mouse_support() and get_mouseinput(). (DLR)